# avalon

./: .gitignore  .gitmodules  Android.mk  CMakeLists.txt  README.mdown
Avalon.xcodeproj/: project.pbxproj
Avalon.xcodeproj/xcshareddata/xcschemes/: AdMob.xcscheme  Appirater.xcscheme  Build all libs.xcscheme  Flurry.xcscheme  FlurryAds.xcscheme  GameCenter.xcscheme  GoogleAnalytics.xcscheme  Misc.xcscheme  Notifications.xcscheme  Paiment.xcscheme
_avalon.xcodeproj/xcshareddata/xcschemes/: Build all libs.xcscheme  GameCenter.xcscheme  Web.xcscheme
avalon/: AdGeneration.h  AdMob.h  Ads.h  AdsManager.h  Amplitude.h  Appirater.h  AppsFlyer.h  Chartboost.h  DeltaDna.h  Epom.h  Facebook.h  FacebookAds.h  FacebookSocialPlugin.h  Firebase.h  Flurry.h  FlurryAds.h  Fuseboxx.h  GameCenter.h  GoogleAnalytics.h  MoPub.h  Notifications.h  OKSocialPlugin.h  ShareManager.h  SocialPlugin.h  SocialPluginHelpers.h  SystemInfo.h  VKSocialPlugin.h  Vungle.h  WebView.h  dictionary.h  empty.cpp  iAd.h  payment.h
avalon.xcodeproj/: project.pbxproj
avalon.xcodeproj/project.xcworkspace/xcshareddata/: Avalon.xccheckout
avalon.xcodeproj/xcshareddata/xcschemes/: AdGeneration Mac.xcscheme  AdGeneration iOS.xcscheme  AdMob Mac.xcscheme  AdMob iOS.xcscheme  Ads Mac.xcscheme  Ads iOS.xcscheme  Appirater Mac.xcscheme  Appirater iOS.xcscheme  AppsFlyer iOS.xcscheme  Build all libs Mac.xcscheme  Build all libs iOS.xcscheme  Chartboost iOS.xcscheme  DeltaDNA iOS.xcscheme  Facebook iOS.xcscheme  FacebookAds iOS.xcscheme  Flurry iOS.xcscheme  Flurry.xcscheme  FlurryAds iOS.xcscheme  FlurryAds.xcscheme  Fuseboxx iOS.xcscheme  GameCenter Mac.xcscheme  GameCenter iOS.xcscheme  GoogleAnalytics Mac.xcscheme  GoogleAnalytics iOS.xcscheme  MoPub iOS.xcscheme  MoPub.xcscheme  MoPubVungleAdaptor iOS.xcscheme  MoPubVungleAdaptor.xcscheme  Notifications Mac.xcscheme  Notifications iOS.xcscheme  Paiment iOS.xcscheme  Payment Mac.xcscheme  Payment iOS.xcscheme  Share iOS.xcscheme  UI Mac.xcscheme  UI iOS.xcscheme  Utils iOS.xcscheme  Vkontakte iOS.xcscheme  Web Mac.xcscheme  Web iOS.xcscheme  (+1 more)
avalon/ads/: Ads.cpp  AdsManager.cpp
avalon/firebase/: Firebase.cpp
avalon/firebase/firebase/: version.h
avalon/i18n/: LanguageKey.cpp  Localization.cpp
avalon/io/: IniReader.cpp  TiledMapLoader.h
avalon/io/ccbloader/: types.h
avalon/payment/: Backend.cpp  Backend.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  ManagerDelegate.h  Product.cpp  Product.h  ProductConsumable.cpp  ProductConsumable.h
avalon/physics/: Body.h  Box2dContainer.h  CollisionManager.h  ContactContainer.h  JsonLoader.h  utils.cpp
avalon/platform/android/: gamecenter_switch.cpp
avalon/platform/android-amazon/gamecenter/: GameCenter.cpp
avalon/platform/android-google/gamecenter/: GameCenter.cpp
avalon/platform/android/adgeneration/: adgeneration.cpp
avalon/platform/android/admob/: AdMob.cpp
avalon/platform/ios/: Prefix.pch  payment.h
avalon/platform/mac/: Prefix.pch
avalon/ui/: Alert.cpp
avalon/utils/: Singleton.h  assert.hpp  dictionary.cpp  labellocalizer.cpp  platform.h  url.h  utility.hpp
proj.android/: .project  google-play-services_lib  project.properties
proj.android-studio/AdGeneration/: build.gradle
proj.android-studio/AdMob/: build.gradle  proguard-rules.pro
proj.android-studio/Amplitude/: build.gradle  proguard-rules.pro
proj.android-studio/Appirater/: build.gradle  proguard-rules.pro
proj.android-studio/AppsFlyer/: build.gradle  proguard-rules.pro
proj.android-studio/BaseGameUtils/: build.gradle
proj.android-studio/Chartboost/: build.gradle  proguard-rules.pro
proj.android-studio/Facebook/: build.gradle  proguard-rules.pro
proj.android-studio/FacebookAds/: build.gradle
proj.android-studio/Firebase/: build.gradle  proguard-rules.pro
proj.android-studio/Flurry/: build.gradle  proguard-rules.pro
proj.android-studio/FlurryAds/: build.gradle
proj.android-studio/GameCenterAmazon/: build.gradle
proj.android-studio/GameCenterGoogle/: build.gradle  proguard-rules.pro
proj.android-studio/GoogleAnalytics/: build.gradle  proguard-rules.pro
proj.android-studio/MoPub/: build.gradle  proguard-rules.pro
proj.android-studio/MoPubAdapters/Vungle/: build.gradle
proj.android-studio/Notifications/: build.gradle  proguard-rules.pro
proj.android-studio/Odnoklassniki/: build.gradle  proguard-rules.pro
proj.android-studio/PaymentAmazon/: build.gradle
proj.android-studio/PaymentGoogle/: build.gradle  proguard-rules.pro
proj.android-studio/ShareManager/: build.gradle  proguard-rules.pro
proj.android-studio/SystemInfo/: build.gradle  proguard-rules.pro
proj.android-studio/UI/: build.gradle  proguard-rules.pro
proj.android-studio/Vkontakte/: build.gradle  proguard-rules.pro
proj.android-studio/Web/: build.gradle
proj.android/AdGeneration/: .project  project.properties
proj.android/AdMob/: .project  project.properties
proj.android/Appirater/: .project  AndroidManifest.xml
proj.android/Chartboost/: .project
proj.android/FacebookAds/: .project
proj.android/Flurry/: .project
proj.android/FlurryAds/: .project
proj.android/GameCenterAmazon/: .project  project.properties  res
proj.android/GameCenterGoogle/: .project  local.properties
proj.android/GoogleAnalytics/: .project  project.properties
proj.android/MoPub/: .project  project.properties
proj.android/MoPubAdapters/Vungle/: .project  project.properties
proj.android/Notifications/: .project  AndroidManifest.xml
proj.android/PaymentAmazon/: .project
proj.android/PaymentGoogle/: .project
proj.android/ShareManager/: .project
proj.android/SystemInfo/: .project
proj.android/UI/: .project
proj.android/Web/: .project
proj.win32/: libAvalon.vcxproj  libAvalon.vcxproj.filters
vendors/DeltaDna/Ios/: DDNAEventStore.m  DDNASDK.h  DDNASDK.m  DDNASettings.m
vendors/Epom/AdClient_iOS_SDK_1.4.1/: adclient-sdk-ios-release-notes.txt
vendors/FaceBook/: facebook-android-sdk  facebook-ios-sdk
vendors/Fuseboxx/ios/: README.md
vendors/google/BaseGameUtils/: project.properties
vendors/vungle/android/: README.txt
(+325 files in other folders)
